[package]
name = "dailies"
version = "0.1.0"
edition = "2021"
default-run = "9"

[dependencies]
nannou = "0.19.0"
gilrs = "0.8"

[workspace]
members = [
]

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "vfx"
path = "src/7.rs"

[[bin]]
name = "9"
path = "src/9.rs"

[[bin]]
name = "controller"
path = "src/controller.rs"

[[bin]]
name = "controller_flow"
path = "src/10.rs"

[[bin]]
name = "min"
path = "src/min.rs"

